# spiideo-league-import-tool

./: .env.example  .gitignore  CLAUDE.md  MAPPING.md  ONBOARDING.md  PROJECT_MEMORY.md  README.md  RUNBOOK.md  conftest.py  pyproject.toml  run.py
league_dataload/: __init__.py  candidates.py  classify_product.py  cli.py  config.py  emit.py  emit_opp_product.py  load_forecast.py  load_hubspot.py  load_lookups.py  load_pricebook.py  loaders.py  matcher.py  normalize.py  product_resolver.py  resolve_reps.py  schema.py  territory.py
league_dataload/clubmatch/: matching.py  normalise.py  surface_review.py
league_dataload/sources/: __init__.py  base.py  csv_source.py  sf_cli_source.py
league_dataload/v2/: __main__.py  build_records.py  gen_sheet.py  gsheet_source.py  hubspot_lookup.py  importer.py  load_mcs.py  mapping.py  picklist_deps.py  pricing.py
tests/: test_smoke.py  test_v2.py
tests/fixtures/: sample_deals.csv
