[project]
name = "league-deals-dataload"
version = "0.1.0"
description = "Turn a big-league-deals sheet into Salesforce DataLoader-ready CSVs (account_contact, opportunity, league_crosscheck). Dependency-free; reads existing SF data from CSV exports or the live sf CLI."
requires-python = ">=3.10"
dependencies = []   # stdlib only

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
league-dataload = "league_dataload.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["league_dataload*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
